--- a/css/style.css
+++ b/css/style.css
@@ -404,10 +404,6 @@ p {
   max-width: 500px;
 }
 
-.achievments {
-  max-width: 800px;
-  margin: 0 auto;
-}
 .achievments__h2 {
   text-align: center;
 }
@@ -458,7 +454,11 @@ p {
   gap: 30px;
 }
 .our-services .our-services-cards__item {
-  padding: 30px 30px 40px;
+  padding: calc(
+            20px +
+                10 *
+                ((100vw - 320px) / 1360)
+        );
   background-color: var(--text-color);
   color: black;
   border-radius: 8px;
@@ -466,21 +466,29 @@ p {
   cursor: pointer;
 }
 .our-services .our-services-cards__item-h4 {
-  font-size: 22px;
+  font-size: calc(
+            18px +
+                4 *
+                ((100vw - 320px) / 1360)
+        );
   font-weight: 600;
   line-height: 1.3;
 }
 .our-services .our-services-cards__item-p {
   font-weight: 300;
   margin: 20px 0;
-  line-height: 1.55;
 }
 .our-services .our-services-cards__item-button {
   font-weight: 800;
-  font-size: 19px;
+  font-size: calc(
+            17px +
+                2 *
+                ((100vw - 320px) / 1360)
+        );
 }
 .our-services .our-services-cards__item-button::after {
   content: "⮕";
+  font-size: 1em;
   display: inline-block;
   margin-left: 10px;
   transition: transform 0.3s;
