--- a/scss/style.scss
+++ b/scss/style.scss
@@ -446,9 +446,6 @@ p {
 }
 
 .achievments {
-    max-width: 800px;
-    margin: 0 auto;
-
     &__h2 {
         text-align: center;
     }
@@ -462,6 +459,7 @@ p {
         &__item {
             display: flex;
             align-items: center;
+
             @include adaptiv-value('gap', 30, 17, 0);
 
             svg {
@@ -507,7 +505,7 @@ p {
         gap: 30px;
 
         &__item {
-            padding: 30px 30px 40px;
+            @include adaptiv-value('padding', 30, 20, 0);
             background-color: var(--text-color);
             color: black;
             border-radius: 8px;
@@ -515,7 +513,7 @@ p {
             cursor: pointer;
 
             &-h4 {
-                font-size: 22px;
+                @include adaptiv-value('font-size', 22, 18, 0);
                 font-weight: 600;
                 line-height: 1.3;
             }
@@ -525,16 +523,16 @@ p {
             &-p {
                 font-weight: 300;
                 margin: 20px 0;
-                line-height: 1.55;
             }
 
             // .our-services-cards__item-button
 
             &-button {
                 font-weight: 800;
-                font-size: 19px;
+                @include adaptiv-value('font-size', 19, 17, 0);
                 &::after {
                     content: '⮕';
+                    font-size: 1em;
                     display: inline-block;
                     margin-left: 10px;
                     transition: transform 0.3s;
