--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ h1 {
   font-size: calc(
             29px +
                 19 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   font-weight: 600;
   letter-spacing: 1px;
@@ -43,7 +43,7 @@ h2 {
   font-size: calc(
             29px +
                 13 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   font-weight: 600;
   margin-bottom: 50px;
@@ -53,7 +53,7 @@ p {
   font-size: calc(
             16px +
                 4 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   line-height: 1.55;
 }
@@ -95,7 +95,7 @@ p {
   font-size: calc(
             16px +
                 4 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   font-weight: 500;
   background-color: #000;
@@ -190,7 +190,7 @@ p {
   width: calc(
             30px +
                 18 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
 }
 .header .header-container .header-logo .header-logo__text {
@@ -364,22 +364,22 @@ p {
   padding-top: calc(
             30px +
                 30 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   padding-right: calc(
             20px +
                 60 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   padding-bottom: calc(
             30px +
                 30 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   padding-left: calc(
             20px +
                 40 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   background-color: var(--text-color);
   color: black;
@@ -419,7 +419,7 @@ p {
   gap: calc(
             17px +
                 13 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
 }
 .achievments-list__item svg {
@@ -427,7 +427,7 @@ p {
   width: calc(
             30px +
                 20 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   fill: var(--text-color);
 }
@@ -457,7 +457,7 @@ p {
   padding: calc(
             20px +
                 10 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   background-color: var(--text-color);
   color: black;
@@ -469,7 +469,7 @@ p {
   font-size: calc(
             18px +
                 4 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
   font-weight: 600;
   line-height: 1.3;
@@ -483,7 +483,7 @@ p {
   font-size: calc(
             17px +
                 2 *
-                ((100vw - 320px) / 1360)
+                min(1px, (100vw - 320px) / 1360)
         );
 }
 .our-services .our-services-cards__item-button::after {
@@ -509,10 +509,9 @@ p {
 .countries .countries-list {
   display: flex;
   justify-content: space-between;
-  gap: 20px;
 }
 .countries .countries-list img {
-  max-width: 140px;
+  max-width: 13%;
 }
 
 .forma {
