--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ $maxWidthContainer: 1;
             #{$minSize +
                 px} +
                 #{$addSize} *
-                ((100vw - 320px) / #{$maxWidth - 320})
+                min(1px, (100vw - 320px) / #{$maxWidth - 320})
         );
     }
 }
@@ -559,9 +559,8 @@ p {
     .countries-list {
         display: flex;
         justify-content: space-between;
-        gap: 20px;
         img {
-            max-width: 140px;
+            max-width: 13%;
         }
     }
 }
