--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,3 @@
-@media (max-width: 578px) {
-  .header .header-container .header-contacts {
-    flex-direction: column;
-    row-gap: 10px;
-  }
-}
 @media (max-width: 1034px) and (min-width: 768px) {
   .header .header-container {
     grid-template-columns: 50% 50%;
@@ -21,6 +15,37 @@
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
+  }
+}
+@media (max-width: 1274px) {
+  .our-services .our-services-cards {
+    flex-direction: column;
+  }
+
+  .about-us .about-us-block {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .about-us .about-us-block__img {
+    align-self: center;
+  }
+}
+@media (max-width: 1024px) {
+  .certificats .container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .certificats .container .certificats__img {
+    max-width: 90%;
+  }
+}
+@media (max-width: 822px) {
+  .slider .hover-slider__item-information-h1 {
+    padding: 0 40px;
+  }
+  .slider .hover-slider__item-information-p {
+    line-height: 1.5;
+    max-width: 70%;
   }
 }
 @media (max-width: 767px) {
@@ -86,28 +111,7 @@
   .header .header-container .header-language {
     display: none;
   }
-}
-@media (max-width: 578px) {
-  .header .header-container .header-contacts {
-    justify-self: center;
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
-  .header .header-container .header-logo {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    justify-self: start;
-  }
-  .header .header-container .header__burger {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    justify-self: end;
-  }
-}
 
-@media (max-width: 767px) {
   .navigation {
     position: fixed;
     top: -200%;
@@ -132,58 +136,59 @@
     display: block;
   }
 }
+@media (max-width: 578px) {
+  .header .header-container .header-contacts {
+    justify-self: center;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    flex-direction: column;
+    row-gap: 10px;
+  }
+  .header .header-container .header-logo {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    justify-self: start;
+  }
+  .header .header-container .header__burger {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: end;
+  }
 
-@media (max-width: 822px) {
-  .slider .hover-slider__item-information-h1 {
-    padding: 0 40px;
+  h1 {
+    letter-spacing: 0px;
   }
-}
-@media (max-width: 822px) {
-  .slider .hover-slider__item-information-p {
-    line-height: 1.5;
-    max-width: 70%;
+
+  .forma {
+    padding: 50px 0;
   }
-}
-@media (max-width: 822px) {
+  .forma-info {
+    gap: 30px;
+  }
+  .forma-info svg {
+    width: 30px;
+  }
+
+  .footer {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .countries {
+    padding-bottom: 50px;
+    padding-top: 10px;
+  }
+
   .slider .hover-slider__item-information {
-    top: 25%;
+    top: 19%;
   }
-}
-@media (max-width: 500px) {
   .slider .hover-slider-buttons__item {
     width: 30px;
     height: 30px;
   }
-}
-@media (max-width: 500px) {
   .slider .hover-slider-buttons__item svg {
     width: 12px;
-  }
-}
-@media (max-width: 1256px) {
-  .about-us .about-us-block {
-    flex-direction: column;
-    row-gap: 20px;
-  }
-}
-.about-us .about-us-block__img {
-  align-self: center;
-}
-
-@media (max-width: 1024px) {
-  .certificats .container {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-@media (max-width: 1024px) {
-  .certificats .container .certificats__img {
-    max-width: 90%;
-  }
-}
-
-@media (max-width: 1274px) {
-  .our-services .our-services-cards {
-    flex-direction: column;
   }
 }
