--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,7 +55,7 @@ body {
 }
 
 h1 {
-    @include adaptiv-value('font-size', 48, 29, 0);
+    @include adaptiv-value('font-size', 48, 28, 0);
     font-weight: 600;
     letter-spacing: 1px;
 }
@@ -295,7 +295,7 @@ p {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                top: 30%;
+                top: 25%;
                 width: 100%;
 
                 &-h1 {
@@ -571,23 +571,19 @@ p {
     background-position: center;
     padding: 100px 0;
     position: relative;
+
     &-info {
         position: relative;
         z-index: 10;
         text-align: center;
-        &__h1 {
-        }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
 
-        &__p {
-            margin: 40px 0 80px;
-        }
-
-        &__arrow {
-            position: absolute;
-            top: 60%;
-            left: 36%;
-            width: 55px;
+        svg {
             fill: var(--text-color);
+            width: 40px;
         }
     }
 
