--- a/scss/style.scss
+++ b/scss/style.scss
@@ -279,6 +279,7 @@ p {
         height: 90vh;
         overflow: hidden;
         min-height: 550px;
+        max-height: 1600px;
 
         &__item {
             position: absolute;
@@ -584,6 +585,7 @@ p {
         svg {
             fill: var(--text-color);
             width: 40px;
+            animation: arrow-forma 1s ease-in-out infinite;
         }
     }
 
@@ -601,5 +603,17 @@ p {
     &__h4 {
         font-size: 14px;
         font-weight: 300;
+    }
+}
+
+@keyframes arrow-forma {
+    0% {
+        transform: translateY(20px);
+    }
+    50% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateY(20px);
     }
 }
