--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -173,6 +173,20 @@
             display: block;
         }
     }
+
+    .footer {
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+        .container {
+            align-items: center;
+            .footer-contacts {
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+            }
+        }
+    }
 }
 
 @media (max-width: 578px) {
@@ -218,11 +232,6 @@
         }
     }
 
-    .footer {
-        padding-top: 30px;
-        padding-bottom: 30px;
-    }
-
     .countries {
         padding-bottom: 50px;
         padding-top: 10px;
@@ -242,6 +251,22 @@
 
             svg {
                 width: 12px;
+            }
+        }
+    }
+
+    .footer {
+        padding-top: 25px;
+        padding-bottom: 25px;
+        .container {
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+            .footer-contacts {
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
             }
         }
     }
