--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,11 @@ p {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.9);
+  visibility: hidden;
 }
 .modal.active {
   display: flex;
+  visibility: visible;
 }
 .modal__close {
   position: absolute;
@@ -130,6 +132,7 @@ p {
   cursor: pointer;
   position: relative;
   justify-self: end;
+  user-select: none;
 }
 .header-language__main {
   display: flex;
