--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,8 +82,10 @@ p {
     left: 0;
     right: 0;
     bottom: 0;
+
     background-color: rgba(0, 0, 0, 0.9);
     visibility: hidden;
+
     &.active {
         display: flex;
         visibility: visible;
@@ -94,14 +96,21 @@ p {
         top: 25px;
         right: 25px;
         cursor: pointer;
-        width: 25px;
-        transition: 0.3s;
-        fill: white;
         background-color: rgba(0, 0, 0, 0.5);
         border-radius: 50%;
-        padding: 5px;
+        padding: 11px;
+        display: flex;
+
+        svg {
+            width: 25px;
+            transition: 0.3s;
+            fill: white;
+        }
+
         &:hover {
-            fill: gray;
+            svg {
+                fill: gray;
+            }
         }
     }
 }
@@ -350,7 +359,6 @@ p {
         top: 50%;
         z-index: 15;
         transform: translateY(-50%);
-        border: none;
         background-color: var(--text-color);
         height: 35px;
         width: 35px;
@@ -611,6 +619,52 @@ p {
         .footer-contacts {
             display: flex;
             gap: 20px;
+        }
+    }
+}
+
+.form-modal {
+    &-inner {
+        max-width: 560px;
+        text-align: center;
+        font-size: 16px;
+        background-color: black;
+        &__img {
+            max-width: 100%;
+        }
+
+        &__h4 {
+            font-size: 36px;
+        }
+
+        &__p {
+        }
+        &-form {
+            padding: 40px 45px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            &__input {
+                border: none;
+                outline: none;
+                border-bottom: 1px solid var(--text-color);
+                color: var(--text-color);
+                background-color: black;
+
+                height: 60px;
+
+                &::placeholder {
+                    color: #5c3618;
+                }
+            }
+
+            &__submit-button {
+                background-color: var(--text-color);
+                padding: 20px 0;
+                color: black;
+                border-radius: 50px;
+            }
         }
     }
 }
