--- a/css/normalize.css
+++ b/css/normalize.css
@@ -197,8 +197,7 @@ button {
 }
 
 a:focus-visible,
-button:focus-visible,
-input:focus-visible {
+button:focus-visible {
     outline: 3px solid rgba(0, 150, 255, 1);
     outline-offset: 3px;
 }
