--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,9 @@ body.lock {
   grid-template-columns: 30% 60% 10%;
   align-items: center;
 }
+.header .header-container .header__burger {
+  display: none;
+}
 .header .header-container .header-logo {
   display: flex;
   align-items: center;
@@ -261,7 +264,6 @@ body.lock {
   height: 100%;
   opacity: 0;
   transition: 0.6s linear;
-  min-height: 750px;
   pointer-events: none;
 }
 .slider .hover-slider__item-information {
@@ -270,8 +272,9 @@ body.lock {
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 25%;
+  justify-content: center;
   width: 100%;
+  height: 100%;
 }
 .slider .hover-slider__item-information-h1 {
   text-align: center;
@@ -599,7 +602,7 @@ body.lock {
 .form-modal-inner-form__submit-button {
   cursor: pointer;
   background-color: var(--text-color);
-  padding: 20px 0;
+  padding: 19px 0;
   color: black;
   border-radius: 50px;
   border: 1px solid transparent;
