--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -93,6 +93,7 @@
             }
 
             .header__burger {
+                display: inline-block;
                 grid-column-start: 2;
                 grid-column-end: 3;
                 justify-self: end;
@@ -174,6 +175,47 @@
         }
     }
 
+    .form-modal {
+        .modal__close {
+            height: 60px;
+            border-radius: 0;
+
+            svg {
+                fill: var(--text-color);
+            }
+        }
+        &-inner {
+            max-width: 100%;
+            max-height: 100%;
+            text-align: center;
+            font-size: 16px;
+            background-color: black;
+
+            &__img {
+            }
+
+            &__h4 {
+                font-size: 29px;
+                margin: 20px 0 12px 0;
+            }
+
+            &__p {
+                font-size: 12px;
+            }
+            &-form {
+                padding: 20px;
+
+                &__input {
+                    height: 50px;
+                }
+            }
+        }
+
+        &.active {
+            flex-direction: column;
+        }
+    }
+
     .footer {
         padding-top: 30px;
         padding-bottom: 30px;
@@ -238,13 +280,6 @@
     }
 
     .slider {
-        .hover-slider {
-            &__item {
-                &-information {
-                    top: 19%;
-                }
-            }
-        }
         .hover-slider-buttons__item {
             width: 30px;
             height: 30px;
