--- a/scss/style.scss
+++ b/scss/style.scss
@@ -217,6 +217,10 @@ body {
 
         align-items: center;
 
+        .header__burger {
+            display: none;
+        }
+
         .header-logo {
             display: flex;
             align-items: center;
@@ -298,7 +302,6 @@ body {
             height: 100%;
             opacity: 0;
             transition: 0.6s linear;
-            min-height: 750px;
             pointer-events: none;
 
             &-information {
@@ -307,9 +310,9 @@ body {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                top: 25%;
+                justify-content: center;
                 width: 100%;
-
+                height: 100%;
                 &-h1 {
                     text-align: center;
                     margin-bottom: 30px;
@@ -629,6 +632,7 @@ body {
         text-align: center;
         font-size: 16px;
         background-color: black;
+
         &__img {
             max-width: 100%;
         }
@@ -667,7 +671,7 @@ body {
             &__submit-button {
                 cursor: pointer;
                 background-color: var(--text-color);
-                padding: 20px 0;
+                padding: 19px 0;
                 color: black;
                 border-radius: 50px;
                 border: 1px solid transparent;
