--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -172,39 +172,48 @@
         }
         .header-language {
             display: block;
+
+            &__items {
+                height: 300px;
+            }
         }
     }
 
     .form-modal {
         .modal__close {
-            height: 60px;
+            background-color: black;
+            position: static;
             border-radius: 0;
-
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            height: 50px;
+            width: 100%;
             svg {
+                width: 20px;
                 fill: var(--text-color);
             }
         }
         &-inner {
-            max-width: 100%;
-            max-height: 100%;
             text-align: center;
-            font-size: 16px;
             background-color: black;
 
             &__img {
             }
 
-            &__h4 {
-                font-size: 29px;
-                margin: 20px 0 12px 0;
-            }
-
-            &__p {
-                font-size: 12px;
-            }
-            &-form {
+            &-info {
                 padding: 20px;
 
+                &__h4 {
+                    font-size: 29px;
+                }
+
+                &__p {
+                    font-size: 12px;
+                }
+            }
+
+            &-form {
                 &__input {
                     height: 50px;
                 }
@@ -213,6 +222,7 @@
 
         &.active {
             flex-direction: column;
+            justify-content: flex-start;
         }
     }
 
