--- a/css/responsive.css
+++ b/css/responsive.css
@@ -141,6 +141,7 @@
   }
 
   .form-modal .modal__close {
+    order: 0;
     background-color: black;
     position: static;
     border-radius: 0;
@@ -157,6 +158,7 @@
   .form-modal-inner {
     text-align: center;
     background-color: black;
+    order: 1;
   }
   .form-modal-inner-info {
     padding: 20px;
