--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,11 +84,9 @@ body {
     bottom: 0;
 
     background-color: rgba(0, 0, 0, 0.9);
-    visibility: hidden;
 
     &.active {
         display: flex;
-        visibility: visible;
     }
 
     &__close {
@@ -161,6 +159,7 @@ body {
         display: flex;
         align-items: center;
         gap: 8px;
+        cursor: pointer;
 
         svg {
             width: 1em;
@@ -179,6 +178,7 @@ body {
             border: 1px solid var(--text-color);
             cursor: pointer;
             padding: 8px 14px;
+            width: 100%;
             transition: background-color 0.3s ease;
 
             &:hover {
@@ -625,7 +625,7 @@ body {
 .form-modal {
     overflow-y: auto;
     &-inner {
-        max-width: 560px;
+        max-width: 600px;
         text-align: center;
         font-size: 16px;
         background-color: black;
