--- a/css/normalize.css
+++ b/css/normalize.css
@@ -194,6 +194,7 @@ button {
     background-color: transparent;
     color: inherit;
     font-size: inherit;
+    cursor: inherit;
 }
 
 a:focus-visible,
