--- a/scss/style.scss
+++ b/scss/style.scss
@@ -175,10 +175,11 @@ body {
         background-color: #000;
 
         .header-language__item {
+            display: block;
             border: 1px solid var(--text-color);
             cursor: pointer;
             padding: 8px 14px;
-            width: 100%;
+
             transition: background-color 0.3s ease;
 
             &:hover {
