--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 
 $maxWidth: 1680;
 $maxWidthContainer: 1;
@@ -38,7 +38,7 @@ body {
     font-size: 16px;
     background-color: black;
     color: var(--text-color);
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
 
     &.lock {
         overflow: hidden;
@@ -55,24 +55,24 @@ body {
 }
 
 .h1-size-text {
-    @include adaptiv-value('font-size', 48, 28, 0);
+    @include adaptiv-value("font-size", 48, 28, 0);
     font-weight: 600;
     letter-spacing: 1px;
 }
 
 .h2-size-text {
-    @include adaptiv-value('font-size', 42, 29, 0);
+    @include adaptiv-value("font-size", 42, 29, 0);
     font-weight: 600;
     margin-bottom: 50px;
 }
 
 .p-size-text {
-    @include adaptiv-value('font-size', 20, 16, 0);
+    @include adaptiv-value("font-size", 20, 16, 0);
     line-height: 1.55;
 }
 
 .modal {
-    content: '';
+    content: "";
     z-index: 200;
     position: fixed;
     display: none;
@@ -115,7 +115,7 @@ body {
 
 .get-vacancy-button {
     position: relative;
-    @include adaptiv-value('font-size', 20, 16, 0);
+    @include adaptiv-value("font-size", 20, 16, 0);
     font-weight: 500;
     background-color: #000;
     // border-radius: 1.875em;
@@ -128,7 +128,7 @@ body {
     transition: 0.8s;
 
     &::before {
-        content: '';
+        content: "";
         position: absolute;
         left: 0;
         width: 100%;
@@ -228,11 +228,11 @@ body {
             gap: 8px;
 
             .header-logo__image {
-                @include adaptiv-value('width', 48, 30, 0);
+                @include adaptiv-value("width", 48, 30, 0);
             }
 
             .header-logo__text {
-                font-family: 'Montserrat', sans-serif;
+                font-family: "Montserrat", sans-serif;
                 font-weight: bold;
 
                 &-span {
@@ -342,7 +342,7 @@ body {
             }
 
             &::after {
-                content: '';
+                content: "";
                 position: absolute;
                 top: 0;
                 z-index: 4;
@@ -423,10 +423,10 @@ body {
 
         &__info {
             flex-basis: 40%;
-            @include adaptiv-value('padding-top', 60, 30, 0);
-            @include adaptiv-value('padding-right', 80, 20, 0);
-            @include adaptiv-value('padding-bottom', 60, 30, 0);
-            @include adaptiv-value('padding-left', 60, 20, 0);
+            @include adaptiv-value("padding-top", 60, 30, 0);
+            @include adaptiv-value("padding-right", 80, 20, 0);
+            @include adaptiv-value("padding-bottom", 60, 30, 0);
+            @include adaptiv-value("padding-left", 60, 20, 0);
 
             background-color: var(--text-color);
             color: black;
@@ -434,7 +434,7 @@ body {
             &-h2 {
                 margin-bottom: 0;
                 &::after {
-                    content: '';
+                    content: "";
                     background-color: black;
                     height: 3px;
                     margin: 18px 0 28px;
@@ -471,11 +471,11 @@ body {
             display: flex;
             align-items: center;
 
-            @include adaptiv-value('gap', 30, 17, 0);
+            @include adaptiv-value("gap", 30, 17, 0);
 
             svg {
                 flex-shrink: 0;
-                @include adaptiv-value('width', 50, 30, 0);
+                @include adaptiv-value("width", 50, 30, 0);
                 fill: var(--text-color);
             }
             &-text {
@@ -487,8 +487,9 @@ body {
 .certificats {
     .container {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         gap: 10px;
+        flex-wrap: wrap;
         .certificats__img {
             max-width: 49%;
             cursor: pointer;
@@ -516,7 +517,7 @@ body {
         gap: 30px;
 
         &__item {
-            @include adaptiv-value('padding', 30, 20, 0);
+            @include adaptiv-value("padding", 30, 20, 0);
             background-color: var(--text-color);
             color: black;
             border-radius: 8px;
@@ -524,7 +525,7 @@ body {
             cursor: pointer;
 
             &-h4 {
-                @include adaptiv-value('font-size', 22, 18, 0);
+                @include adaptiv-value("font-size", 22, 18, 0);
                 font-weight: 600;
                 line-height: 1.3;
             }
@@ -540,9 +541,9 @@ body {
 
             &-button {
                 font-weight: 800;
-                @include adaptiv-value('font-size', 19, 17, 0);
+                @include adaptiv-value("font-size", 19, 17, 0);
                 &::after {
-                    content: '⮕';
+                    content: "⮕";
                     font-size: 1em;
                     display: inline-block;
                     margin-left: 10px;
@@ -577,7 +578,7 @@ body {
 }
 
 .forma {
-    background-image: url('/images/forma.jpg');
+    background-image: url("/images/forma.jpg");
     background-size: cover;
     background-position: center;
     padding: 100px 0;
