--- a/scss/style.scss
+++ b/scss/style.scss
@@ -631,8 +631,11 @@ body {
         text-align: center;
         font-size: 16px;
         background-color: black;
+        .obolochka_for_image {
+            background-color: white;
+        }
         &__img {
-            max-width: 100%;
+            max-width: 30%;
         }
         &-info {
             padding: 40px 45px;
@@ -764,8 +767,8 @@ body {
     z-index: 111;
     bottom: 30px;
     right: 30px;
-    width: 75px;
-    height: 75px;
+    width: 50px;
+    height: 50px;
     display: flex;
     justify-content: center;
     cursor: pointer;
@@ -773,7 +776,7 @@ body {
     border-radius: 50%;
     outline: 3px solid white;
     svg {
-        width: 40px;
+        width: 26px;
         fill: white;
     }
 
